add model training notebook

--- a/mh_discharge_sa_data_eda.ipynb
+++ b/mh_discharge_sa_data_eda.ipynb
@@ -1138,20 +1138,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Censorship rate of the data set: 4.74 %\n"
+      "Censorship rate of the data set: 38.44 %\n"
      ]
     }
    ],
    "source": [
     "# create a column to denote discharge status, which can be used as the censorship status in the target variable\n",
-    "df['discharge_flag'] = np.where(df.EOC_REASON_FOR_DISCHARGE_CRM.isnull(), False, True)\n",
+    "df['discharge_flag'] = np.where(df.EOC_REASON_FOR_DISCHARGE_CRM != 'Routine', False, True)\n",
     "\n",
     "# create a column to denote if there is non-routine discharge\n",
-    "df['non_routine_discharge_flag'] = np.where(\n",
-    "    ~df.discharge_flag, 'NA', np.where(\n",
-    "        df.EOC_REASON_FOR_DISCHARGE_CRM != 'Routine', 'Y', 'N'\n",
-    "    )\n",
-    ")\n",
+    "#df['non_routine_discharge_flag'] = np.where(\n",
+    "#    ~df.discharge_flag, 'NA', np.where(\n",
+    "#        df.EOC_REASON_FOR_DISCHARGE_CRM != 'Routine', 'Y', 'N'\n",
+    "#    )\n",
+    "#)\n",
     "\n",
     "print('Censorship rate of the data set:', round(df[~df.discharge_flag].client_id.nunique() / df.client_id.nunique() * 100, 2), '%')"
    ]
@@ -1179,7 +1179,8 @@
    "source": [
     "# use the censorship status on the latest appointment date as the final stage\n",
     "df['app_date_rk'] = df.groupby(['client_id', 'EOC_KEY_X']).APPOINTMENT_DATE_X.rank(method = 'dense', ascending = False)\n",
-    "latest_discharge = df[df.app_date_rk == 1.0][['client_id', 'EOC_KEY_X', 'discharge_flag', 'non_routine_discharge_flag']]"
+    "#latest_discharge = df[df.app_date_rk == 1.0][['client_id', 'EOC_KEY_X', 'discharge_flag', 'non_routine_discharge_flag']]\n",
+    "latest_discharge = df[df.app_date_rk == 1.0][['client_id', 'EOC_KEY_X', 'discharge_flag']]"
    ]
   },
   {
@@ -1223,7 +1224,6 @@
        "      <th>EOC_KEY_X</th>\n",
        "      <th>survival_days</th>\n",
        "      <th>discharge_flag</th>\n",
-       "      <th>non_routine_discharge_flag</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1233,15 +1233,13 @@
        "      <td>10998928</td>\n",
        "      <td>67</td>\n",
        "      <td>True</td>\n",
-       "      <td>N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>aaronromero@example.com5/25/2011</td>\n",
        "      <td>12319804</td>\n",
        "      <td>6</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Y</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1249,7 +1247,6 @@
        "      <td>11023578</td>\n",
        "      <td>108</td>\n",
        "      <td>True</td>\n",
-       "      <td>N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1257,7 +1254,6 @@
        "      <td>12173322</td>\n",
        "      <td>57</td>\n",
        "      <td>True</td>\n",
-       "      <td>N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1265,7 +1261,6 @@
        "      <td>9665140</td>\n",
        "      <td>94</td>\n",
        "      <td>True</td>\n",
-       "      <td>N</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1279,12 +1274,12 @@
        "3  abigailanderson@example.net11/9/2005   12173322             57   \n",
        "4         abridges@example.org8/30/2004    9665140             94   \n",
        "\n",
-       "   discharge_flag non_routine_discharge_flag  \n",
-       "0            True                          N  \n",
-       "1            True                          Y  \n",
-       "2            True                          N  \n",
-       "3            True                          N  \n",
-       "4            True                          N  "
+       "   discharge_flag  \n",
+       "0            True  \n",
+       "1           False  \n",
+       "2            True  \n",
+       "3            True  \n",
+       "4            True  "
       ]
      },
      "execution_count": 18,
@@ -2336,7 +2331,9 @@
     "    'Assigned Primary Therapist Gender': 'pri_prd_gender',\n",
     "    'Assigned Primary Therapist Race': 'pri_prd_race',\n",
     "    'Assigned Primary Therapist employment type': 'pri_prd_emp_type'\n",
-    "})"
+    "})\n",
+    "\n",
+    "pri_prd['pri_prd_emp_type'] = np.where(~pri_prd.pri_prd_emp_type.isin(['employee_full_time', 'employee_part_time']), 'contractor', pri_prd.pri_prd_emp_type)"
    ]
   },
   {
@@ -2431,7 +2428,7 @@
        "      <td>1.0</td>\n",
        "      <td>Male</td>\n",
        "      <td>Asian</td>\n",
-       "      <td>1099</td>\n",
+       "      <td>contractor</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
@@ -2530,7 +2527,7 @@
        "\n",
        "                                pri_prd_race    pri_prd_emp_type  \\\n",
        "0                                      White  employee_full_time   \n",
-       "1                                      Asian                1099   \n",
+       "1                                      Asian          contractor   \n",
        "2                                      White  employee_full_time   \n",
        "3  Native Hawaiian or Other Pacific Islander  employee_part_time   \n",
        "4                                      White  employee_part_time   \n",
@@ -2584,14 +2581,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of the cleaned data set: (887, 38)\n",
-      "Total # of rows with missing values: 0\n"
+      "Shape of the cleaned data set: (887, 37)\n",
+      "Total # of rows with missing values: 0\n",
+      "Total # of clients who were discharged before 10/1/23: 69\n"
      ]
     }
    ],
    "source": [
     "print('Shape of the cleaned data set:', df_all.shape)\n",
-    "print('Total # of rows with missing values:', df_all.isnull().sum().sum())"
+    "print('Total # of rows with missing values:', df_all.isnull().sum().sum())\n",
+    "print('Total # of clients who were discharged before 10/1/23:', df_all[df_all.survival_days == 0].shape[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since we want to include only clients who were not discharged before the beginning of the exercise, I'll exclude the 69 clients who were discharged earlier"
    ]
   },
   {
@@ -2600,7 +2606,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df_all.to_csv('./data/mh_discharge_sa.csv')"
+    "df_all = df_all[df_all.survival_days > 0]\n",
+    "df_all.to_csv('./data/mh_discharge_sa.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of the cleaned data set: (818, 37)\n",
+      "Censorship rate of the data set: 38.88 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Shape of the cleaned data set:', df_all.shape)\n",
+    "print('Censorship rate of the data set:', round(df_all[~df_all.discharge_flag].client_id.nunique() / df_all.client_id.nunique() * 100, 2), '%')"
    ]
   }
  ],
